[package]
name = "mdl-nbd"
version = "0.1.0"
edition = "2021"
authors = ["Matt Layher <mdlayher@gmail.com>"]
license = "MIT"
homepage = "https://github.com/mdlayher/nbd-rs"
repository = "https://github.com/mdlayher/nbd-rs"
keywords = ["nbd", "nbd-server", "nbd-client", "tokio"]
description = """
An asynchronous Rust client and server implementation of the [Network Block
Device (NBD)](https://en.wikipedia.org/wiki/Network_block_device) protocol.
"""
default-run = "mdl-nbd-server"

[[bin]]
name = "mdl-nbd-client"
path = "src/bin/client.rs"

[[bin]]
name = "mdl-nbd-server"
path = "src/bin/server.rs"

[dependencies]
bitflags = "1.3.2"
bytes = "1.1.0"
num-derive= "0.3.3"
num-traits = "0.2.14"
tokio = { version = "1.15.0", features = ["full"] }
