[package]
name = "mdl-nbd"
version = "0.1.0"
edition = "2021"
authors = ["Matt Layher <mdlayher@gmail.com>"]
license = "MIT"
homepage = "https://github.com/mdlayher/nbd-rs"
repository = "https://github.com/mdlayher/nbd-rs"
keywords = ["nbd", "nbd-server", "nbd-client", "tokio"]
description = """
An asynchronous Rust client and server implementation of the [Network Block
Device (NBD)](https://en.wikipedia.org/wiki/Network_block_device) protocol.
"""

[dependencies]
bitflags = "1.3.2"
bytes = "1.1.0"
log = "0.4.14"
num-derive= "0.3.3"
num-traits = "0.2.14"
tokio = { version = "1.15.0", features = ["full"] }
